--- a/index.html
+++ b/index.html
@@ -219,12 +219,15 @@
     <h3 class="gallery-section">Hydrological Analysis</h3>
 
     <figure class="card" data-cat="hydro">
-      <a href="assets/visuals/panjgur-analysis.pdf" target="_blank">
-         <img src="assets/visuals/panjgur-cover.jpg" alt="Panjgur Report" style="opacity:0.8"> 
+      <a href="assets/visuals/Water_Delineation_Panjgur.pdf" target="_blank" style="text-decoration: none;">
+        <div class="pdf-placeholder">
+          <span class="pdf-icon">📄</span>
+          <span class="pdf-label">Open PDF</span>
+        </div>
       </a>
       <figcaption>
         <b>Water Delineation: Panjgur</b>
-        <p>Hydrological assessment and water delineation in Panjgur District, Pakistan. (PDF Download)</p>
+        <p>Hydrological assessment and water delineation in Panjgur District, Pakistan.</p>
       </figcaption>
     </figure>
 
